---
source: parser/src/parser/parser.rs
description: "if self.adjust:\n    if True:\n        print(\"adjust is True and adjusted_daily_records_csv_path exists\")\n    else:\n        print(\"adjust is True\")\nelse:\n    print(\"adjust is False\")\n\n"
input_file: parser/test_data/inputs/if.py
---
Module {
    node: Node {
        start: 0,
        end: 182,
    },
    body: [
        IfStatement(
            If {
                node: Node {
                    start: 0,
                    end: 182,
                },
                test: Attribute(
                    Attribute {
                        node: Node {
                            start: 3,
                            end: 14,
                        },
                        value: Name(
                            Name {
                                node: Node {
                                    start: 3,
                                    end: 7,
                                },
                                id: "self",
                            },
                        ),
                        attr: "adjust",
                    },
                ),
                body: [
                    IfStatement(
                        If {
                            node: Node {
                                start: 20,
                                end: 146,
                            },
                            test: Constant(
                                Constant {
                                    node: Node {
                                        start: 23,
                                        end: 27,
                                    },
                                    value: Bool(
                                        true,
                                    ),
                                },
                            ),
                            body: [
                                ExpressionStatement(
                                    Call(
                                        Call {
                                            node: Node {
                                                start: 37,
                                                end: 103,
                                            },
                                            func: Name(
                                                Name {
                                                    node: Node {
                                                        start: 37,
                                                        end: 42,
                                                    },
                                                    id: "print",
                                                },
                                            ),
                                            args: [
                                                Constant(
                                                    Constant {
                                                        node: Node {
                                                            start: 43,
                                                            end: 102,
                                                        },
                                                        value: Str(
                                                            "adjust is True and adjusted_daily_records_csv_path exists",
                                                        ),
                                                    },
                                                ),
                                            ],
                                            keywords: [],
                                            starargs: None,
                                            kwargs: None,
                                        },
                                    ),
                                ),
                            ],
                            orelse: [
                                ExpressionStatement(
                                    Call(
                                        Call {
                                            node: Node {
                                                start: 122,
                                                end: 145,
                                            },
                                            func: Name(
                                                Name {
                                                    node: Node {
                                                        start: 122,
                                                        end: 127,
                                                    },
                                                    id: "print",
                                                },
                                            ),
                                            args: [
                                                Constant(
                                                    Constant {
                                                        node: Node {
                                                            start: 128,
                                                            end: 144,
                                                        },
                                                        value: Str(
                                                            "adjust is True",
                                                        ),
                                                    },
                                                ),
                                            ],
                                            keywords: [],
                                            starargs: None,
                                            kwargs: None,
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                ],
                orelse: [
                    ExpressionStatement(
                        Call(
                            Call {
                                node: Node {
                                    start: 156,
                                    end: 180,
                                },
                                func: Name(
                                    Name {
                                        node: Node {
                                            start: 156,
                                            end: 161,
                                        },
                                        id: "print",
                                    },
                                ),
                                args: [
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 162,
                                                end: 179,
                                            },
                                            value: Str(
                                                "adjust is False",
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [],
                                starargs: None,
                                kwargs: None,
                            },
                        ),
                    ),
                ],
            },
        ),
    ],
}
